--- a/package.json
+++ b/package.json
@@ -1,27 +1,26 @@
 {
-  "name": "wick-chat",
-  "private": true,
-  "version": "1.0.0",
-  "type": "module",
-  "scripts": {
-    "server": "nodemon backend/server.js",
-    "dev": "nodemon server.js"
-  },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/react": "^18.2.56",
-    "@types/react-dom": "^18.2.19",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "nodemon": "^3.1.0",
-    "vite": "^5.1.4"
-  }
+	"name": "wick-chat",
+	"version": "1.0.0",
+	"description": "",
+	"main": "server.js",
+	"scripts": {
+		"server": "nodemon backend/server.js",
+		"start": "node backend/server.js",
+		"build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
+	},
+	"type": "module",
+	"keywords": [],
+	"author": "",
+	"dependencies": {
+		"bcryptjs": "^2.4.3",
+		"cookie-parser": "^1.4.6",
+		"dotenv": "^16.4.1",
+		"express": "^4.18.2",
+		"jsonwebtoken": "^9.0.2",
+		"mongoose": "^8.1.1",
+		"socket.io": "^4.7.4"
+	},
+	"devDependencies": {
+		"nodemon": "^3.0.3"
+	}
 }
